Assert project id prefix